src/Aml/Bundle/WebBundle/Resources/public/css/main.css
/* ... */
#footer a{
	color:#fff;
	text-decoration:none;
}
#droits
{
	width: 100%;
	float: left;
	text-align: center;
	font-size: x-small;
	padding-bottom: 1em;
}
#textbas {
	margin-top: 87px;
}

#link-page-fb{
	background:url("../images/pictos/facebook2.png") no-repeat scroll 0 0 transparent;
	padding:0 0 0 20px;
}
/* --- Fin Footer --- */


/* ------------------- FIN STRUCTURE GLOBAL DU SITE ------------------ */

/* ------------------- BLOCS DU SITE ------------------ */
 #blog{
 	height:500px;
 	
 }

.photocentre {
	text-align: center;
	margin-right: auto;
	margin-left: auto;
}
.sousmenu {
	text-align: left;
	font-size: 12px;
	font-family: Geneva, Arial, Helvetica, sans-serif;
	font-weight: bold;
	margin-bottom: 15px;
	margin-top: 5px;
}

#plan{
	width: 98%;
	padding-right: 1%;
	padding-left: 1%;

}
#plan table{
	text-align: center;

}
#block-concert{
	float:left;
	height:100%;
	padding:0 0 15px;
	position:relative;
	width:220px;
}

#block-concert .container-date-description-block{ margin-bottom:10px; margin-top:5px; }
#block-concert .container-date-description-block p{ display:inline; margin-top:0; }

#agenda-concerts-public li{ list-style:disc outside none; }
#agenda-concerts-public h2,#agenda-concerts-public h2 a{
    font-size: 17px;
    line-height: 25px;
    margin: 0 0 5px;
}

#agenda-concerts-public .event-item{

}
#agenda-concerts-public .event-item-structure{
   display: inline-block;
}

#agenda-concerts-public .event-item-container-thumbnail{

}
#agenda-concerts-public .event-item-container-description{
    padding: 0 0 0 10px;
    width: 68%;
}
/* AGENDA - Liste Evenement */

.uiHeaderSection, .uiSideHeader {
    /*background-color: #f2f2f2;*/
    border-bottom: none;
    border-top: solid 1px #e2e2e2;
    padding: 4px 6px 5px;
}
.uiHeaderSection td{
    padding: 5px;
}

.accueil-intro{
	padding: 0 15px;
}

/* ------------------- Pagination --------------- */
#global .Paginator a:visited:hover, #global .Paginator a:hover, #global .Paginator a:active {
  color:red;
  /*text-decoration:none; */
}



#global .Paginator {
  font-size:12px;
  margin:15px auto 0;
  padding-top:5px;
  text-align:center;

}

#global .Paginator a {
 /* background:#D44B20 none repeat scroll 0 0;*/
  padding:2px 6px;
  /*text-decoration:none;*/
  margin:0 2px 0 0;
   font-family:Helvetica, Arial, Verdana, sans-serif;
  font-style:italic;
  font-weight:bold;
  /*color: #fff;*/
  -moz-border-radius: 5px;
  -webkit-border-radius: 5px;
  border-radius: 5px;
}

#global .Paginator a.selected {
  background:none;
  padding:2px 6px;
  /*text-decoration:none;*/
  margin:0 2px 0 0;
  color: #D44B20;
  font-family:Helvetica, Arial, Verdana, sans-serif;
}

#global .Paginator li {
  margin:0;
  padding:0;
  list-style-type:none;
  display:inline;
}

/* ------------------- BLOG ------------------- */
.blog-article{
	border-bottom:1px solid #CCCCCC;
	padding:0 0 20px 0px;
	width:600px;
	text-align:justify;
}

.publi-info {
    color: #999999;
    font-style: italic;
    line-height: 1.5em;
    margin: 0 0 5px;
}
.blog-article-block,#blog-last-article-block {
	border-bottom:1px solid #CCCCCC;
	margin:0 0 0 0px;
	padding:0 0 15px 0;
	width:100%;
	float:left;
	text-align:justify;
}
.blog-visuel{
	text-align: center;
    width: 100%;
}
.blog-tags{
	text-align:center;
	font-weight:bold;
}

.side-bloc ul li{ list-style:disc outside none; }
.side-bloc a,.side-bloc li a,.side-bloc li a.active{ color:#FF0066; }
.side-bloc a:hover,.side-bloc a.active:hover{ color: #B2B2B2; }



#blog-archives-block ul{ margin-top:0; }
#blog-archives-block h4{ margin-left:10px; }

.social-links,.blog-article .links{
	width:160px;
	/*height:20px;*/
	position:relative;
	float:right;
}
.social-links a,.blog-article .links a{
	padding-left:20px;
	position:relative;
	text-decoration:none;	
}

#facebook-share-link{ text-decoration:none; float:right; }
#facebook-share-link img{  }
h2 a{ 	text-decoration:none;	}
.social-links img,.blog-article .links img{
	left:0;
	position:absolute;
	top:0;
}
.date-article-block{
	padding:0;
	font-size:11px;
}

/* ------------------- Fin BLOG ------------------- */
/* ------------------- Discographie ------------------- */
.disc-item{
	border-bottom:1px solid #CCCCCC;
	margin: 10px 0;
    padding: 0 0 15px;
	position:relative;
	width:100%;
	float:left;
}
h2.discographie{ margin-bottom : 0px; color:#FF0066; }
span.disc-date-sortie{ font-size:11px; }
.disc-item.last{ border:none; }
.discographie-bloc-titre{ margin-bottom:20px; }
.disc-pochette-list{
	float:left;
	width:33%;
}

/* provisoir : g pas les lib pour imagecache */
.disc-pochette-list img{ height:160px; width:180px; }

.disc-description-list{
	float:left	;
	text-align:justify;
	width:63%;
}

.disc-description-list h3{
	margin:0 0 4px;
	text-decoration:none;
}

.disc-pochette-block{
	float:left;
	margin:0 15px 0 0;
}

.disc-description-block{
	float:right;
	width:380px;
	text-align:justify;
}

#discographie-last-album-block{
	float:left;
	margin:0 0 15px 0;
	padding:0 0 15px 0;
	width:100%;
}

.disc-list-tracks h3{ margin-top:10px; }

.disc-list-tracks{	
	border-top:1px solid #CCCCCC;
	float:left;
	margin-top:10px;
	width:100%;
}

.disc-list-tracks table{
	width:100%;
}


tr.even, tr.odd {
    background-color: #EEEEEE;
    border-bottom: 1px solid #CCCCCC;
    padding: 0.1em 0.6em;
}

/* ------------------- Fin Discographie ------------------- */

/* ------------------- Galerie photo ------------------- */
#gallery{
	margin-left:auto;
	margin-right:auto;
	width:90%;
}

#gallery li{
	float:left;
	margin:15px 0 0 15px;
	padding:6px 6px 10px;
	display:inline;
	list-style:none outside none;
}

#gallery img{ 
	border:5px solid #FFFFFF;
	
	-moz-box-shadow: 1px 1px 12px #555; 
	-webkit-box-shadow: 1px 1px 12px #555; 
	box-shadow: 1px 1px 12px #555; 

    filter:progid:DXImageTransform.Microsoft.Shadow(color='#aaaaaa', Direction=135, Strength=12); 
    
  }  
/* ... */

